# DotCVM

./: .gitignore  AppMain.java  CMakeLists.txt  DotCVM.pro  README.md  app_main.h  build.sh  buildAll.sh  buildDebug.sh  buildRelease.sh  clean.sh  debug.sh  devices.cpp  devices.h  file_utils.cpp  file_utils.h  install.sh  installDebug.sh  j_app_main.h  log.h  main.cpp  maths.h  olcPixelGameEngine.hpp  release.sh  run.sh  runDebug.sh  runRelease.sh  uninstall.sh  uninstallDebug.sh
bscripts/: build_debug.sh  build_module_debug.sh  build_module_release.sh  build_release.sh  clean.sh  clean_debug.sh  clean_modules.sh  clean_release.sh  install.sh  install_debug.sh  install_modules.sh  release.sh  run_all_d.sh  run_all_r.sh  run_debug.sh  run_release.sh  uninstall.sh  uninstall_debug.sh
dotcvm/include/dotcvm/: dotcvm.hpp  main.hpp
dotcvm/include/dotcvm/core/: modules.hpp
dotcvm/include/dotcvm/utils/: config.hpp  debug.hpp  log.hpp  string.hpp  utils.hpp
dotcvm/src/: main.cpp  plateform.cpp
dotcvm/src/core/: modules.cpp
dotcvm/src/utils/: config.cpp  debug.cpp  string.cpp  utils.cpp
include/: app_main.h  cpu.h  cpu_internal.h  dc_linkedlist.h  devices.h  err_code.h  file_utils.h  io.h  log.h  main.h  maths.h  reg_internal.h  utils.h  window.h
include/DotCVM/debug/: debug.h
include/DotCVM/devices/: cpu_internal.h  devices.h  instructions.h  interrupts.h  io.h  reg.h  reg_internal.h
include/DotCVM/gui/: window.h
include/DotCVM/utils/: err_code.h  file_utils.h  linkedlist.h  log.h  types.h
include/dotcvm/: dotcvm.hpp
include/dotcvm/core/: modules.hpp
include/dotcvm/utils/: config.hpp  debug.hpp  string.hpp
jinterface/: app_main.cpp
modules/: device_example.dpf
modules/include/: dotcvm
modules/include/modules/: debug_console.hpp  interrupt_bus.hpp  io_bus.hpp  memory.hpp
modules/include/modules/user_device/: user_device.hpp  window.hpp
modules/include/olcPixelGameEngine/: olcPixelGameEngine.hpp
modules/standard_cpu/: CMakeLists.txt
modules/standard_cpu/module_folder/: device.dpf
modules/standard_cpu/src/: cpu.cpp
modules/standard_debug_console/: CMakeLists.txt
modules/standard_debug_console/module_folder/: device.dpf
modules/standard_debug_console/src/: debug_console.cpp
modules/standard_interrupt_bus/: CMakeLists.txt
modules/standard_interrupt_bus/module_folder/: device.dpf
modules/standard_interrupt_bus/src/: interrupt_bus.cpp
modules/standard_io_bus/: CMakeLists.txt
modules/standard_io_bus/module_folder/: device.dpf
modules/standard_io_bus/src/: io_bus.cpp
modules/standard_memory/: CMakeLists.txt
modules/standard_memory/bscripts/: build_debug.sh  build_release.sh
modules/standard_memory/module_folder/: conf.cfg  device.dpf
modules/standard_memory/src/: memory.cpp
modules/standard_screen/src/: olcPixelGameEngine.cpp
modules/standard_user_device/: CMakeLists.txt
modules/standard_user_device/module_folder/: conf.cfg  device.dpf
modules/standard_user_device/src/: user_device.cpp  window.cpp
src/: AppMain.java  dc_utils.cpp  debug.cpp  devices.cpp  file_utils.cpp  main.cpp  utils.cpp  window.cpp
src/debug/: debug.cpp
src/devices/: cpu.cpp  cpu_internal.cpp  debug_console.cpp  devices.cpp  drive.cpp  instructions.cpp  keyboard.cpp  memory.cpp  mouse.cpp  reg_internal.cpp  screen.cpp
src/dotcvm/core/: modules.cpp
src/dotcvm/utils/: debug.cpp
src/gui/: window.cpp
src/jinterface/: app_main.cpp
src/utils/: file_utils.cpp  utils.cpp
